Added JSON example additionaly to courses map for that JSON

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -22,7 +22,7 @@ const {
     <title>{title}</title>
     <meta name="description" content={description}>
 
-    <script defer src="https://kit.fontawesome.com/76c49369ed.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/76c49369ed.js" crossorigin="anonymous"></script>
     
     <ViewTransitions />
 </head>
