--- a/src/components/dashboard/Courses.astro
+++ b/src/components/dashboard/Courses.astro
@@ -48,7 +48,9 @@ import Module from "./Module.astro";
       <span>Vespertino</span>
     </button>
   </div>
-  <Module />
+  <div class="modules-section">
+    <Module />
+  </div>
 </section>
 
 <style lang="scss">
@@ -200,11 +202,16 @@ import Module from "./Module.astro";
       
       &:is(.show) {
         translate: 0% 0%;
-        height: 50px;
+        height: 40px;
         border-radius: .25rem;
         margin-block-end: 1rem;
       }
     }
+  }
+
+  .modules-section {
+    overflow-y: auto;
+    max-height: 300px;
   }
 </style>
 
