Intalled astro Icons

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,21 +1,21 @@
 <footer transition:persist >
     <nav>
         <a
-        href=""
+        href="/"
         class="active">
-        <i class="fa-solid fa-house"></i>
+        <i transition:name="icon-house" class="fa-solid fa-house"></i>
         <span class="text">Inicio</span>
         </a>
         <a href="">
-        <i class="fa-solid fa-hand-fist"></i>
+        <i transition:name="icon-fist" class="fa-solid fa-hand-fist"></i>
         <span class="text">Desafíos</span>
         </a>
         <a href="">
-        <i class="fa-solid fa-graduation-cap"></i>
+        <i transition:name="icon-cap" class="fa-solid fa-graduation-cap"></i>
         <span class="text">Cursos</span>
         </a>
-        <a href="">
-        <i class="fa-solid fa-money-bill"></i>
+        <a href="/payments">
+        <i transition:name="icon-bill" class="fa-solid fa-money-bill"></i>
         <span class="text">Pagos</span>
         </a>
     </nav>
