--- a/src/pages/payments.astro
+++ b/src/pages/payments.astro
@@ -20,7 +20,9 @@ import Header from "../components/dashboard/Header.astro";
   }
 
   section {
+    height: 100vh;
     padding: .5rem;
     background-color: hsl(var(--main-light));
+    border: 1px solid hsl(var(--main-color));
   }
 </style>
