--- a/src/components/dashboard/UserFeedback.astro
+++ b/src/components/dashboard/UserFeedback.astro
@@ -92,6 +92,7 @@ import { Icon } from "astro-icon";
 
       p {
         display: flex;
+        align-items: center;
         gap: 0.5rem;
         color: hsl(var(--main-light));
 
