--- a/src/pages/challenges.astro
+++ b/src/pages/challenges.astro
@@ -9,6 +9,7 @@ import Header from "../components/dashboard/Header.astro";
     <Header />
     <div class="sections">
         <section>
+            <h1>Desafíos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, blanditiis. Ipsam animi, a dolorem alias, quisquam similique amet autem, aliquid placeat cum qui voluptate ducimus facere recusandae sint debitis. Suscipit.</p>
         </section>
     </div>
