--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -83,3 +83,11 @@ section {
     aspect-ratio: 1;
     line-height: 1;
 }
+
+.expanded-link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    z-index: 2;
+}
