--- a/src/components/dashboard/Courses.astro
+++ b/src/components/dashboard/Courses.astro
@@ -239,7 +239,7 @@ const {
   }
 </style>
 
-<script>
+<script lang="js">
 const openButton = document.querySelector('.tag.filter[data-open]');
 const addButton = document.querySelectorAll('.tag[data-add]');
 const listOfFilters = document.querySelector('.list-of-filters');
