--- a/src/pages/notifications/notification-1.astro
+++ b/src/pages/notifications/notification-1.astro
@@ -64,7 +64,7 @@ deploy correctamente, pero eso no quita puntos 🤣</p>
     </section>
   </div>
   <div class="sections">
-    <Courses />
+    <Courses transition:name="courses" />
   </div>
 </Layout>
 
