--- a/src/pages/notifications/notification-2.astro
+++ b/src/pages/notifications/notification-2.astro
@@ -55,7 +55,7 @@ import Courses from "../../components/dashboard/Courses.astro";
     </section>
   </div>
   <div class="sections">
-    <Courses />
+    <Courses transition:name="courses" />
   </div>
 </Layout>
 
